# silver

./: .gitmodules  CMakeLists.txt  README.md
examples/: CMakeLists.txt  crt.cpp  iphone.cpp  test.cpp  window.cpp
include/: silver.hpp
scripts/: build_examples.sh
src/: Animation.cpp  Animation.hpp  App.cpp  App.hpp  CMakeLists.txt  Elements.cpp  Elements.hpp  Lib.cpp  Lib.hpp  Lib.hpp.save  Shader.cpp  Shader.hpp  State.cpp  State.hpp  Text.cpp  Text.hpp  Vertices.hpp  View.cpp  View.hpp  glad.c  glad.h
